# SentinelPilot

./: .dockerignore  .env.example  .gitignore  AGENTS.md  DESIGN.md  PRODUCT.md  README.md  README.zh-CN.md  docker-compose.yml  start_local.ps1
backend/: Dockerfile  pyproject.toml
backend/sentinel_pilot/: __init__.py  __main__.py  config.py  desktop_runtime.py  main.py  runtime_resources.py
backend/sentinel_pilot/adapters/: __init__.py  antivirus_source.py  base.py  edr_source.py  ips_source.py  mock_source.py  ndr_source.py  siem_source.py  vendor_source.py  waf_source.py
backend/sentinel_pilot/agent/: __init__.py  orchestrator.py  tool_registry.py  tools.py
backend/sentinel_pilot/api/: dependencies.py  routes_alerts.py  routes_approvals.py  routes_evals.py  routes_integrations.py  routes_investigations.py  routes_llm.py  routes_logs.py  routes_reports.py  routes_settings.py  routes_system.py  schemas.py
backend/sentinel_pilot/core/: __init__.py  errors.py  models.py
backend/sentinel_pilot/evals/: __init__.py  graders.py  runner.py
backend/sentinel_pilot/llm/: __init__.py  base.py  factory.py  mock.py  openai_compatible.py
backend/sentinel_pilot/services/: approval_service.py  investigation_service.py  log_service.py  (+1 more)
backend/tests/: test_alerts_api.py  test_approvals.py  test_dependency_wiring.py  test_desktop_runtime.py  test_evals.py  test_health.py  test_im_notifier.py  test_investigation_api.py  test_investigation_flow.py  test_llm.py  test_mock_source.py  test_operations_console.py  test_report_service.py  test_repositories.py  test_tools.py
(+76 files in other folders)
